--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,19 +15,22 @@
     <meta name="robots" content="all" />
     <meta name="rating" content="general" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
+    <meta
+      name="google-site-verification"
+      content="6ngnQXGEPkYUapoT2catTosB5u1nc_A17FOIpkXKRAw"
+    />
     <!-- Meta Google -->
     <meta
       name="description"
-      content="Association des Internes des Hopitaux de Côte d'Ivoire"
+      content="Site officiel de l'Association des Internes des Hôpitaux de Côte d'Ivoire"
     />
     <meta
       name="keywords"
-      content="Association,des,Internes,des,Hopitaux,de,Côte,d',Ivoire"
+      content="Site,officiel,de,l',Association,des,Internes,des,Hopitaux,de,Côte,d',Ivoire"
     />
     <meta name="author" content="AIHCI" />
     <meta name="copyright" content="©0109-2023 AIHCI" />
-    <meta name="application-name" content="" />
+    <meta name="application-name" content="AIHCI" />
 
     <title>
       AIHCI | Association des Internes des Hôpitaux de Côte d'Ivoire
